css/jagmain.css
/* ... */
#sendbtn:hover {
  color: #FFF9F5;
  background-color: #F9423A;
}
.form-group {
  margin: 0 auto;
  text-align: center;
}
.packagescontainer {
  display: flex;
  flex-direction: row;
  width: 100%;
  margin: 0 auto;
  text-align: center;
  justify-content: center;
}
@media (max-width: 650px) {
  .packagescontainer {
    flex-direction: column;
  }
}
.sidepackagebtn {
  display: none !important;
  border: 2px solid #F9423A;
  display: inline-block;
  height: 75px;
  width: 120px;
  line-height: 72px;
  border-radius: 50%;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 600;
  padding-top:0;
  margin: 25px;
  color: #F9423A;
  margin-top: 175px;
  transition-delay: 0s;
  transition-duration: 0.3s;
  transition-property: all;
  transition-timing-function: ease;
}
.sidepackagebtn:hover {
  background-color: #F9423A;
  color: white;
}
@media (max-width: 800px) {
  .sidepackagebtn {
    display: none;
  }
}
.package {
  background-color: #F9423A;
  color: white;
  margin: 25px;
  margin-top: 40px;
  width: 23%;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 200;
  border-top-right-radius: 25px;
  border-top-left-radius: 25px;
}
@media (max-width: 1200px) {
  .package {
    width: 28%;
    margin: 15px;
  }
}
@media (max-width: 992px) {
  .package {
    width: 33%;
    margin: 10px;
  }
}
@media (max-width: 650px) {
  .package {
    width: 80%;
    margin: 0 auto;
    margin-top: 20px;
  }
}
.package strong {
  font-weight: 600;
}
.package img {
  padding: 25px;
}
.packagebtn {
  margin: 25px;
  padding: 20px;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 1.1em;
  letter-spacing: 5px;
  color: #F9423A;
  border: 3px solid white;
  background-color: white;
  transition-delay: 0s;
  transition-duration: 0.3s;
  transition-property: all;
  transition-timing-function: ease;
}
.packagebtn:hover {
  cursor: pointer;
  color: white;
  background-color: #F9423A;
}
.packagelist {
  margin-left: 25px;
  margin-right: 25px;
  padding-top: 15px;
  padding-bottom: 15px;
  border: 1px solid white;
  border-radius: 5px;
}
.guaranteeparent {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  width: 100%;
  text-align: center;
  color: #3f3f3f;
}
#guaranteeheader {
  margin: 0 auto;
  margin-top: 6em;
  margin-bottom: 1em;
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 1.1em;
  letter-spacing: 5px;
  color: #3f3f3f;
}
.guaranteeitem {
  font-size: 2.5em;
  font-family: 'aleolight', serif;
  font-style: normal;
  font-weight: 300;
  text-align: center;
  width: 100%;
  margin: 0 auto;
  text-align: center;
}
.guaranteeitem img {
  width: 20px;
  margin: 0 auto;
  margin-bottom: 0.5em;
  margin-top: 1em;
}
.activationsparent {
  display: flex;
  margin: 0 auto;
  width: 100%;
  text-align: center;
  flex-direction: row;
  justify-content: center;
  flex-wrap: nowrap;
  color: #3f3f3f;
  align-items: flex-end;
}
@media (max-width: 992px) {
  .activationsparent {
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
  }
}
#activationsheader {
  color: #3f3f3f;
  text-align: center;
  margin: 0 auto;
  margin-top: 3em;
  margin-bottom: 1em;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 2.5em;
}
.activationsitem {
  margin: 0 auto;
  margin-left: 2em;
  margin-right: 2em;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 200;
  font-size: 1.5em;
  margin-bottom: 2em;
}
.activationsitem img {
  width: 70px;
  margin: 0 auto;
  text-align: center;
  margin-bottom: 1em;
}
.somethingelse {
  text-align: center;
  margin: 0 auto;
  color: #3f3f3f;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 200;
  font-size: 1.5em;
  margin-bottom: 3em;
  margin-top: 3em;
}
.somethingelse strong {
  font-weight: 600;
}
.getstartedbtn {
  display: inline-block;
  margin: 0 auto;
  margin-top: 2em;
  text-align: center;
  background-color: #F9423A;
  color: white;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 0.9em;
  letter-spacing: 5px;
  padding: 25px;
  border: 3px solid #F9423A;
  transition-delay: 0s;
  transition-duration: 0.3s;
  transition-property: all;
  transition-timing-function: ease;
}
.getstartedbtn:hover {
  cursor: pointer;
  background-color: #FFF9F5;
  color: #F9423A;
}
.quoteimg {
  width: 150px;
  margin: 0 auto;
  text-align: center;
  margin-bottom: -100px;
}
.topomatch {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: bottom;
}

/* Style the header: fixed position (always stay at the top) */
.header {
  position: fixed;
  top: 0;
  z-index: 1;
  width: 100%;
  background-color: transparent;
  transition-delay: 0s;
  transition-duration: 0s;
  transition-property: all;
  transition-timing-function: linear;
}

/* The progress container (grey background) */
.progress-container {
  width: 100%;
  height: 4px;
  background-color: transparent;
}

/* The progress bar (scroll indicator) */
.progress-bar {
  height: 4px;
  background: #F9423A;
  width: 0%;
  overflow-y: visible;
  -webkit-box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.1);
  -moz-box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.1);
  box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.1);
}

@media (max-width: 992px) {
  .progress-container {
    height: 4px;
  }
  .progress-bar {
    height: 4px;
    background: #F9423A;
  }
}
.articlehead {
  position: relative;
  display: block;
  text-align: center;
  background-color: #FFF9F5;
  padding-left: 200px;
  padding-right: 200px;
  padding-bottom: 20px;
  margin: 0 auto;
  width: 80vw;
  margin-top: -180px;
  z-index: 9 !important;
}
.articlehead .firsthfive {
  background-color: #3f3f3f;
  color: white;
  width: 300px;
  margin: 0 auto;
  margin-top: -50px;
}
/* ... */

